#Initializes the Autoconf system
AC_INIT([server],[client],[1.0])
#enable automake
AM_INIT_AUTOMAKE
#generate Makefile by running the script './configure'
AC_CONFIG_FILES([Makefile src/Makefile])
#check compilers
AC_PROG_CC([cc gcc])
#check data type UINT16_T
AC_TYPE_UINT16_T
#check
AC_PROG_INSTALL
AC_OUTPUT